--- a/src/Home.css
+++ b/src/Home.css
@@ -1,7 +1,11 @@
 div {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    background-color: red;
+    width: 400px;
+    height: 300px;
+    overflow: auto;
 }
 
 img {
